--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repaso de Clases Three.js</title>
-    <link rel="stylesheet" href="/style.css"> <!-- Enlaza tu archivo CSS -->
+    <link rel="stylesheet" href="src/style.css"> <!-- Enlaza tu archivo CSS -->
 </head>
 <body>
     
@@ -71,14 +71,14 @@
 
             <!-- Tarjetas de Niveles -->
             <section class="tarjetas-niveles">
-                <a href="basico.html" class="tarjeta-a">
+                <a href="/src/basico.html" class="tarjeta-a">
                      <div class="tarjeta-nivel">
                             <img src="Basic.png" alt="">
                             <h2>Básico</h2>
                     </div>
                 </a>
 
-                <a href="basico.html" class="tarjeta-a">
+                <a href="/src/medio.html" class="tarjeta-a">
                     <div class="tarjeta-nivel">
                            <img src="Basic.png" alt="">
                            <h2>Medio</h2>
@@ -86,7 +86,7 @@
                </a>
 
 
-               <a href="basico.html" class="tarjeta-a">
+               <a href="src/avanzado.html" class="tarjeta-a">
                 <div class="tarjeta-nivel">
                        <img src="Basic.png" alt="">
                        <h2>Avanzado</h2>
