--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <a href="#main">
                 <div class="logotipo">
-                    <img src="logo-codigo-60px.png" alt="Logotipo">
+                    <img src="static/logo-codigo-60px.png" alt="Logotipo">
                 </div>
             </a>
           <!-- Espacio para el Logotipo -->
@@ -73,14 +73,14 @@
             <section class="tarjetas-niveles">
                 <a href="/src/basico.html" class="tarjeta-a">
                      <div class="tarjeta-nivel">
-                            <img src="Basic.png" alt="">
+                            <img src="static/Basic.png" alt="">
                             <h2>Básico</h2>
                     </div>
                 </a>
 
                 <a href="/src/medio.html" class="tarjeta-a">
                     <div class="tarjeta-nivel">
-                           <img src="Basic.png" alt="">
+                           <img src="static/Medio.png" alt="">
                            <h2>Medio</h2>
                    </div>
                </a>
@@ -88,7 +88,7 @@
 
                <a href="src/avanzado.html" class="tarjeta-a">
                 <div class="tarjeta-nivel">
-                       <img src="Basic.png" alt="">
+                       <img src="static/avanzado.png" alt="">
                        <h2>Avanzado</h2>
                </div>
                </a>
