--- a/src/basico.html
+++ b/src/basico.html
@@ -53,7 +53,7 @@
             </div>
             <a href="#main">
                 <div class="logotipo">
-                    <img src="logo-codigo-60px.png" alt="Logotipo">
+                    <img src="static/logo-codigo-60px.png" alt="Logotipo">
                 </div>
             </a>
           <!-- Espacio para el Logotipo -->
