--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             <a href="#main">
                 <div class="logotipo">
-                    <img src="static/logo-codigo-60px.png" alt="Logotipo">
+                    <img src="./static/logo-codigo-60px.png" alt="Logotipo">
                 </div>
             </a>
           <!-- Espacio para el Logotipo -->
