--- a/src/basico.html
+++ b/src/basico.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Basico Three.js</title>
-    <link rel="stylesheet" href="src/style.css"> <!-- Enlaza tu archivo CSS -->
+    <link rel="stylesheet" href="/src/style.css"> <!-- Enlaza tu archivo CSS -->
 </head>
 <body>
     
@@ -53,7 +53,7 @@
             </div>
             <a href="#main">
                 <div class="logotipo">
-                    <img src="static/logo-codigo-60px.png" alt="Logotipo">
+                    <img src="/static/logo-codigo-60px.png" alt="Logotipo">
                 </div>
             </a>
           <!-- Espacio para el Logotipo -->
